--- a/scripts/Dockerfile-env-sgfuzz
+++ b/scripts/Dockerfile-env-sgfuzz
@@ -86,12 +86,12 @@ WORKDIR /home/user
 ENV HOME=/home/user
 
 RUN if [ "${ZH_CN}" = "true" ]; then \
-        git config --global url."https://gitclone.com/github.com/".insteadOf "https://github.com/"; \
+        git config --global url."https://gh-proxy.com/github.com/".insteadOf "https://github.com/"; \
     fi
 
 RUN git config --global http.version HTTP/1.1 && \
     git config --global user.name Kherrisan && \
-    git config --global user.email zdkscope@outlook.com
+    git config --global user.email zdkscope@qq.com
     
 COPY patches /tmp/patches
 COPY --chown=user:user scripts/.zshrc ${HOME}/.zshrc
