--- a/scripts/Dockerfile-env-sgfuzz
+++ b/scripts/Dockerfile-env-sgfuzz
@@ -133,6 +133,11 @@ RUN git clone https://github.com/google/honggfuzz.git --depth=1 && \
     sudo mv libhfcommon/libhfcommon.a /usr/lib/libhfcommon.a && \
     sudo mv libhfnetdriver/libhfnetdriver.a /usr/lib/libhfnetdriver.a
 
+# Build sgfuzz-llvm-pass
+RUN git clone https://github.com/Kherrisan/sgfuzz-llvm-pass.git && \
+    cd sgfuzz-llvm-pass && \
+    make
+
 COPY --chown=user:user . ${HOME}/profuzzbench
 RUN sudo chmod +x ${HOME}/profuzzbench/scripts/*.sh 
 
