--- a/scripts/Dockerfile-env-aflnet
+++ b/scripts/Dockerfile-env-aflnet
@@ -97,8 +97,8 @@ RUN git clone https://github.com/AFLNet/AFLNet.git aflnet && \
     make clean all ${MAKE_OPT} && \
     cd llvm_mode && make ${MAKE_OPT}
 
-COPY --chown=user:user . ${HOME}/profuzzbench
-RUN sudo chmod +x ${HOME}/profuzzbench/scripts/*.sh 
+# COPY --chown=user:user . ${HOME}/profuzzbench
+# RUN sudo chmod +x ${HOME}/profuzzbench/scripts/*.sh 
 
 # Build libgcov_preload.so
 COPY scripts/gcov_preload.c gcov_preload.c
