Fix: ft on live555

--- a/scripts/dockerfile/Dockerfile-env-ft
+++ b/scripts/dockerfile/Dockerfile-env-ft
@@ -12,10 +12,6 @@ ARG MAKE_OPT="-j4"
 
 ENV ZH_CN=${ZH_CN}
 
-# ENV HTTP_PROXY=${HTTP_PROXY}
-# ENV HTTPS_PROXY=${HTTPS_PROXY}
-# ENV http_proxy=${HTTP_PROXY}
-# ENV https_proxy=${HTTP_PROXY}
 ENV no_proxy="localhost,127.0.0.1,192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
 ENV NO_PROXY=${no_proxy}
 
@@ -64,13 +60,6 @@ RUN if [ "${ZH_CN}" = "true" ]; then \
 # Copy prebuilt custom LLVM version
 COPY --from=llvm /llvm/* /usr
 
-# RUN update-alternatives --install /usr/bin/clang clang $(which clang-17) 100 && \
-#     update-alternatives --install /usr/bin/clang++ clang++ $(which clang++-17) 100 && \
-#     update-alternatives --install /usr/bin/llvm-config llvm-config $(which llvm-config-17) 100 && \
-#     update-alternatives --install /usr/bin/llvm-symbolizer llvm-symbolizer $(which llvm-symbolizer-17) 100 && \
-#     update-alternatives --install /usr/bin/llvm-cov llvm-cov $(which llvm-cov-17) 100 && \
-#     update-alternatives --install /usr/bin/llvm-profdata llvm-profdata $(which llvm-profdata-17) 100
-
 RUN chmod 777 /tmp
 
 # Users
@@ -92,10 +81,6 @@ USER user
 WORKDIR /home/user
 ENV HOME=/home/user
 
-RUN if [ "${ZH_CN}" = "true" ]; then \
-        git config --global url."https://gitclone.com/github.com/".insteadOf "https://github.com/"; \
-    fi
-
 RUN git config --global http.version HTTP/1.1 && \
     git config --global user.name Kherrisan && \
     git config --global user.email zdkscope@qq.com
@@ -103,14 +88,10 @@ RUN git config --global http.version HTTP/1.1 && \
 # Rust
 ENV RUSTUP_DIST_SERVER=https://rsproxy.cn
 ENV RUSTUP_UPDATE_ROOT=https://rsproxy.cn/rustup
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | bash -s -- -y --default-toolchain stable && \
-    ${HOME}/.cargo/bin/cargo install grcov && \
-    sudo cp ${HOME}/.cargo/bin/grcov /usr/local/bin/
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | bash -s -- -y --default-toolchain stable
     
 COPY --chown=${USER_ID}:${GROUP_ID} scripts/cargo.toml ${HOME}/.cargo/
-COPY --chown=${USER_ID}:${GROUP_ID} scripts/.zshrc ${HOME}/.zshrc
-COPY --chown=${USER_ID}:${GROUP_ID} scripts/.p10k.zsh ${HOME}/.p10k.zsh
-RUN zsh -c ". ~/.zshrc"
+
 ##############
 # End of user setup
 
@@ -120,9 +101,31 @@ RUN zsh -c ". ~/.zshrc"
 # Environments and fuzzer tools
 ##############
 
-# FT-Net
+# Some cargo dependencies are downloaded via github, so we need to configure the mirror
+RUN if [ "${ZH_CN}" = "true" ]; then \
+        git config --global url."https://gh.llkk.cc/https://github.com/".insteadOf https://github.com/; \
+    fi
+
 COPY patches /tmp/patches
-RUN git clone https://github.com/fuzztruction/fuzztruction-net.git && \
+
+# AFLNet
+RUN if [ "${ZH_CN}" = "true" ]; then \
+        git clone https://gitee.com/kherrisan/aflnet.git aflnet; \
+    else \
+        git clone https://github.com/AFLNet/AFLNet.git aflnet; \
+    fi && \
+    cd aflnet && \
+    git checkout 6d86ca0cf6852cfa7a776a77fb7886d8bee46c14 && \
+    git apply /tmp/patches/aflnet.patch && \
+    make clean all ${MAKE_OPT} && \
+    cd llvm_mode && make ${MAKE_OPT}
+
+# FT-Net
+RUN if [ "${ZH_CN}" = "true" ]; then \
+        git clone https://gitee.com/kherrisan/fuzztruction-net.git fuzztruction-net; \
+    else \
+        git clone https://github.com/fuzztruction/fuzztruction-net.git fuzztruction-net; \
+    fi && \
     cd fuzztruction-net && \
     git checkout c34408b && \
     git apply /tmp/patches/ft.patch && \
@@ -137,17 +140,16 @@ RUN cd fuzztruction-net/generator/pass && \
     make clean && \ 
     make all ${MAKE_OPT}
 
-RUN git clone https://gitee.com/kherrisan/libfaketime.git && \
+RUN if [ "${ZH_CN}" = "true" ]; then \
+        git clone https://gitee.com/kherrisan/libfaketime.git; \
+    else \
+        git clone https://github.com/wolfcw/libfaketime.git; \
+    fi && \
     cd libfaketime && \
     make -j
 
 RUN sudo ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo "Asia/Shanghai" | sudo tee /etc/timezone
-
-# Install rr
-RUN cd /tmp && \
-    wget https://github.com/rr-debugger/rr/releases/download/5.7.0/rr-5.7.0-Linux-$(uname -m).deb && \
-    sudo dpkg -i rr-5.7.0-Linux-$(uname -m).deb
 
 RUN sudo touch /etc/ld.so.conf.d/ft-net.conf && \
     echo "${HOME}/fuzztruction-net/generator/pass" | sudo tee "/etc/ld.so.conf.d/ft-net.conf" && \
