--- a/scripts/cargo.toml
+++ b/scripts/cargo.toml
@@ -1,8 +1,8 @@
 [source.crates-io]
-replace-with = "rsproxy-sparse"
+replace-with = 'mirror'
 
-[source.rsproxy-sparse]
-registry = "sparse+https://rsproxy.cn/index/"
+[source.mirror]
+registry = "sparse+https://mirrors.ustc.edu.cn/crates.io-index/"
 
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
