--- a/scripts/dockerfile/Dockerfile-env-quicfuzz
+++ b/scripts/dockerfile/Dockerfile-env-quicfuzz
@@ -1,6 +1,5 @@
 FROM ubuntu:24.04
 
-# ---------- ARG/ENV/PROXY/中文源 ----------
 ARG ZH_CN
 ARG HTTP_PROXY
 ARG HTTPS_PROXY
@@ -9,6 +8,9 @@ ARG https_proxy=${HTTP_PROXY}
 ARG MAKE_OPT="-j4"
 
 ENV ZH_CN=${ZH_CN}
+
+ENV no_proxy="localhost,127.0.0.1,192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
+ENV NO_PROXY=${no_proxy}
 
 RUN apt update && apt install -y apt-transport-https ca-certificates
 RUN if [ "${ZH_CN}" = "true" ]; then \
