--- a/subjects/DICOM/dcmtk/ft-source.yaml
+++ b/subjects/DICOM/dcmtk/ft-source.yaml
@@ -6,11 +6,11 @@ source:
     - "-aet"
     - "YOU_AET"
     - "-aec"
-    - "DCM4CHEE"
+    - "ANY-SCP"
     - "-d"
     - "127.0.0.1"
-    - "6789"
-    - /home/user/fuzztruction/fuzztruction-experiments/comparison-with-state-of-the-art/configurations/networked/dcmtk/dcm_files/image-00000.dcm
+    - "5158"
+    - /home/user/profuzzbench/subjects/DICOM/dcmtk/dcm-files/image-00000.dcm
   input-type: Tcp
   output-type: Tcp
   is-server: false
