--- a/scripts/dockerfiles/Dockerfile-env-tlspuffin
+++ b/scripts/dockerfiles/Dockerfile-env-tlspuffin
@@ -28,20 +28,30 @@ RUN apt-get update && apt-get install -y \
     libssl-dev \
     rustc \
     cargo \
+    sudo \
     && apt-get install -y nix \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+RUN chmod 777 /tmp
+# Users
+##############
+# Add a new user
+ARG USER_ID=1000
+ARG GROUP_ID=1000
+ENV USER_ID=${USER_ID}
+ENV GROUP_ID=${GROUP_ID}
 
+RUN userdel $(getent passwd ${USER_ID} | cut -d: -f1) || true
+RUN groupdel $(getent group ${GROUP_ID} | cut -d: -f1) || true
+RUN groupadd -g ${GROUP_ID} user && \
+    useradd -u ${USER_ID} -rm -d /home/user -s /usr/bin/bash -g user -G sudo user -p "$(openssl passwd -1 user)" && \
+    echo "user ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+
+# Use user as default username
+USER user
+WORKDIR /home/user
+ENV HOME=/home/user
 # 下载 tlspuffin 最新源代码
-RUN git clone https://github.com/tlspuffin/tlspuffin /tlspuffin
-
-# 设置工作目录
-WORKDIR /tlspuffin
-
-# 在 docker 的非交互环境中运行命令
-RUN nix-shell --run "./tools/mk_vendor make openssl:openssl312-asan"
-
-# 构建模糊测试目标
-RUN nix-shell --run "cargo build --release --bin=tlspuffin --features=cputs"
-
-RUN mkdir -p /logs
+RUN git clone https://github.com/tlspuffin/tlspuffin /home/user/tlspuffin
+WORKDIR /home/user/tlspuffin
+RUN sudo nix-shell
