--- a/scripts/dockerfile/Dockerfile-env-quicfuzz
+++ b/scripts/dockerfile/Dockerfile-env-quicfuzz
@@ -89,14 +89,22 @@ COPY patches /tmp/patches
 
 RUN git clone https://github.com/QUICTester/QUIC-Fuzz.git quic-fuzz
 RUN cd quic-fuzz/aflnet && \
+    wget https://www.openssl.org/source/openssl-3.0.2.tar.gz && \
+    tar xzvf openssl-3.0.2.tar.gz && \
+    cd openssl-3.0.2 && \
+    ./Configure linux-x86_64 no-shared && \
+    make ${MAKE_OPT} && \
+    cd .. && \
     make clean all && \
     cd llvm_mode && \
     make ${MAKE_OPT}
-RUN cd quic-fuzz/SnapFuzz/SaBRe/plugins && \
+RUN cd quic-fuzz/aflnet/SnapFuzz/SaBRe/plugins && \
     ln -sf ../../snapfuzz snapfuzz && \
     cd ../ && \
     mkdir -p build && \
     cd build && \
+    CFLAGS="-Wno-error=nonnull -Wno-error=array-bounds" \
+    CXXFLAGS="-Wno-error=nonnull -Wno-error=array-bounds" \
     cmake -DCMAKE_BUILD_TYPE=RELEASE -DSF_MEMFS=OFF -DSF_STDIO=ON -DSF_SLEEP=ON -DSF_SMARTDEFER=OFF .. && \ 
     make ${MAKE_OPT} && \
     mv plugins/snapfuzz/libsnapfuzz.so plugins/snapfuzz/libsnapfuzz_no_snap.so && \
