--- a/subjects/TLS/WolfSSL/ft-sink.yaml
+++ b/subjects/TLS/WolfSSL/ft-sink.yaml
@@ -8,9 +8,9 @@ sink:
       "-p",
       "4433",
       "-c",
-      "/home/user/profuzzbench/test.fullchain.pem",
+      "/home/user/profuzzbench/cert/fullchain.crt",
       "-k",
-      "/home/user/profuzzbench/test.key.pem",
+      "/home/user/profuzzbench/cert/server.key",
       "-e",
     ]
   working-dir: "/home/user/target/ft/consumer/wolfssl/"
