--- a/scripts/dockerfile/Dockerfile-env-sgfuzz
+++ b/scripts/dockerfile/Dockerfile-env-sgfuzz
@@ -83,9 +83,9 @@ USER user
 WORKDIR /home/user
 ENV HOME=/home/user
 
-RUN if [ "${ZH_CN}" = "true" ]; then \
-        git config --global url."https://gh-proxy.com/github.com/".insteadOf "https://github.com/"; \
-    fi
+# RUN if [ "${ZH_CN}" = "true" ]; then \
+#         git config --global url."https://gh-proxy.com/github.com/".insteadOf "https://github.com/"; \
+#     fi
 
 RUN git config --global http.version HTTP/1.1 && \
     git config --global user.name Kherrisan && \
@@ -113,7 +113,7 @@ RUN git clone https://github.com/AFLNet/AFLNet.git aflnet && \
     cd llvm_mode && make ${MAKE_OPT}
 
 # SGFuzz
-RUN git clone https://github.com/bajinsheng/SGFuzz.git --depth=2 sgfuzz && \
+RUN git clone https://github.com/bajinsheng/SGFuzz.git --depth=4 sgfuzz && \
     cd sgfuzz && \
     git checkout 00dbbd70ba79f1bcff3f7dfdb4fda0645cf91225 && \
     git apply /tmp/patches/sgfuzz.patch && \
