--- a/scripts/dockerfile/Dockerfile-env-stateafl
+++ b/scripts/dockerfile/Dockerfile-env-stateafl
@@ -144,6 +144,13 @@ RUN gcc -shared -fpic fake_random.c -g -o libfake_random.so && \
     echo "${HOME}" | sudo tee "/etc/ld.so.conf.d/fake_random.conf" && \
     sudo ldconfig
 
+# For deterministic timestamps
+RUN git clone https://github.com/stateafl/libfaketime-asan-fixed libfaketime-asan-fixed && \
+    cd libfaketime-asan-fixed && \
+    git checkout 7e46ea4 && \
+    cd src && \
+    make ${MAKE_OPT}
+
 # Disable ASLR
 RUN echo "kernel.randomize_va_space = 0" | sudo tee -a /etc/sysctl.d/01-disable-aslr.conf && \
     sudo sysctl -p /etc/sysctl.d/01-disable-aslr.conf
