--- a/scripts/dockerfile/Dockerfile-env-sgfuzz
+++ b/scripts/dockerfile/Dockerfile-env-sgfuzz
@@ -153,7 +153,8 @@ RUN git clone https://github.com/stateafl/libfaketime-asan-fixed libfaketime-asa
     cd libfaketime-asan-fixed && \
     git checkout 7e46ea4 && \
     cd src && \
-    make ${MAKE_OPT}
+    make ${MAKE_OPT} && \
+    cp libfaketime.so.1 ${HOME}/libfaketime.so.1
 
 # Disable ASLR fowever
 RUN echo "kernel.randomize_va_space = 0" | sudo tee -a /etc/sysctl.d/01-disable-aslr.conf && \
